test/compilable/must_use_suppress.d
import core.attribute;

@mustUse struct S {}

S fun() { return S(); }

void test()
{
    cast(void) fun();
}
