test/fail_compilation/fail5851a.d

class Foo
{
    @property Object fun()
    {
        return null;
    }
    alias fun this;
}

void main()
{
}
